--- a/railway.toml
+++ b/railway.toml
@@ -3,6 +3,6 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "bun run dist/main.js start -g $GH_TOKEN"
+startCommand = "/entrypoint.sh"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
